[package]
name = "zakhar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "framework", "standard_framework", "gateway", "rustls_backend", "model"]

[dev-dependencies]
test-case = "2.2.1"
